# numbers

./: .gitignore  README.md  main.py  pyproject.toml
german_number_writer/: germannumbersegmenter.py  germannumberwriter.py  germansegmentwriter.py
number_writer/: numberwriter.py  segmentwriter.py
number_writer/english/: englishnumberwriter.py  englishsegmentwriter.py
number_writer/english_number_writer/: englishnumberwriter.py  englishsegmentwriter.py  numberwriter.py  segmentwriter.py
number_writer/german/: germannumberwriter.py  germansegmentwriter.py
number_writer/german_number_writer/: germannumberwriter.py  germansegmentwriter.py
tests/: test_english_numbers.py  test_german_numbers.py  test_numbers.py
tests/approved_files/: GermanNumbersTest.test_a_really_long_one.approved.txt  GermanNumbersTest.test_a_really_long_one.received.txt  GermanNumbersTest.test_every_three_digit_number.approved.txt  GermanNumbersTest.test_every_three_digit_number.received.txt  GermanNumbersTest.test_every_two_digit_number.approved.txt  GermanNumbersTest.test_every_two_digit_number.received.txt  GermanNumbersTest.test_five_hundred_and_twelve_thousand_six_hundred_and_seven.approved.txt  GermanNumbersTest.test_five_hundred_and_twelve_thousand_six_hundred_and_seven.received.txt  GermanNumbersTest.test_forty_three_million.approved.txt  GermanNumbersTest.test_forty_three_million.received.txt  GermanNumbersTest.test_one_hundred_and_one_thousand.approved.txt  GermanNumbersTest.test_one_hundred_one_million.approved.txt  GermanNumbersTest.test_one_million.approved.txt  (+9 more)
