[tool.poetry]
name = "number-writer"
version = "0.1.0"
description = ""
authors = ["Jörg Sesterhenn <joerg.sesterhenn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
approvaltests = "^11.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
