[tool.poetry]
name = "number-writer"
version = "0.1.0"
description = ""
authors = ["Jörg Sesterhenn <joerg.sesterhenn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
empty-files = "^0.0.9"
typing_extensions = "^4.11.0"
approvaltests = "^11.2.1"
pytest-approvaltests ="^0.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
